# lr_rest_books_rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.toml
compose/: config.toml  docker-compose.yml
src/: main.rs  model.rs
src/adapter/: middleware.rs  mod.rs  router.rs
src/application/: mod.rs  wire_helper.rs
src/application/dto/: mod.rs  review.rs  user.rs
src/application/executor/: book_operator.rs  mod.rs  review_operator.rs  user_operator.rs
src/domain/: mod.rs
src/domain/gateway/: book_manager.rs  mod.rs  review_manager.rs  user_manager.rs
src/domain/model/: book.rs  mod.rs  review.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: helper.rs  mod.rs  redis.rs
src/infrastructure/config/: mod.rs
src/infrastructure/database/: mod.rs  mongo.rs  mysql.rs  sqlite.rs
src/infrastructure/token/: jwt.rs  mod.rs
