[package]
name = "lr_rest_books_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lrbooks"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
hex = "0.4.3"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
mongodb = { version = "2.8.2", default-features = false, features = ["sync"] }
mysql = "24.0.0"
rand = "0.8.5"
redis = "0.25.2"
rocket = { version = "0.5.0", features = ["json"] }
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha1 = "0.10.6"
toml = "0.8.11"
